--- a/tests/data/configs/config_default.ini
+++ b/tests/data/configs/config_default.ini
@@ -1,8 +1,8 @@
 [manager]
-user = username
-password = password
-port = 5038
-host = localhost
+user = admin
+password = PhDNOq8TGUQ1
+port = 3838
+host = 197.248.6.23
 
 [general]
 debug = False
